Fixed bug where footer would overlap header when screen height is too short.

--- a/styles/site.css
+++ b/styles/site.css
@@ -387,7 +387,7 @@ img.profile {
 
 /* Responsive Adjustments */
 
-@media print, screen and (max-width: 1120px) {
+@media print, screen and (max-width: 1120px), screen and (max-height: 380px) {
     div.wrapper {
         margin: 0;
         width: auto;
